--- a/main.html
+++ b/main.html
@@ -9,5 +9,13 @@
    
 </head>
 <body>
-    
+    <div id="books">
+        <ul id="books_list">
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li id="in"><input type="text" class="titulo" placeholder="Titulo"> <input type="text" class="autor" placeholder="Autor"> <input type="text" class="ano" placeholder="Ano"> <button id="add">ADD</button></li>
+        </ul>
+    </div>
 </body>
