Botao de Add gera uma lista no HTML

--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
         delete module.exports
         window.$ = window.jQuery = require('jquery');
     </script>
-   
+    <script src="window.js"></script>
 </head>
 <body>
     <div id="books">
