--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
     </div>
     <div>
         <ul>
-            <li id="in"><input type="text" class="titulo" placeholder="Titulo"> <input type="text" class="autor" placeholder="Autor"> <input type="text" class="ano" placeholder="Ano"> <button id="add">ADD</button></li>
+            <li id="in"><input type="text" class="titulo" placeholder="Titulo"> <input type="text" class="autor" placeholder="Autor"> <input type="text" class="edicao" placeholder="edicao"> <button id="add">ADD</button></li>
         </ul>
     </div>
 </body>
