--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
         window.$ = window.jQuery = require('jquery');
     </script>
     <script src="window.js"></script>
+    <script src="ordenador.js"></script>
 </head>
 <body>
     <div id="books">
