Add Menu para selecionar as propriedades da funcao de ordenamento

--- a/main.html
+++ b/main.html
@@ -19,6 +19,13 @@
             <li id="in"><input type="text" class="titulo" placeholder="Titulo"> <input type="text" class="autor" placeholder="Autor"> <input type="text" class="edicao" placeholder="edicao"> <button id="add">ADD</button></li>
         </ul>
     </div>
+    <div id="settings">
+        <ul>
+            <li prop="autor">Autor    <button class=ordem prop=0>ASC</button>    <button id="up_a">up</button><button id="down_a">down</button></li>
+            <li prop="titulo">Titulo  <button class=ordem prop=0>ASC</button>       <button id="up_t">up</button><button id="down_t">down</button></li>
+            <li prop="edicao">Edição        <button class=ordem prop=0>ASC</button>       <button id="up_ano">up</button><button id="down_ano">down</button></li>
+        </ul>
+    </div>
     <div>
         <button id="ordenar">ORDENAR</button>
     </div>
