--- a/main.html
+++ b/main.html
@@ -27,6 +27,6 @@
         </ul>
     </div>
     <div>
-        <button id="ordenar">ORDENAR</button>
+        <button id="ordenar">ORDENAR</button> <button id="salvar">Save Config</button>
     </div>
 </body>
